# AGENTS.md

./: .claude-code copy.yaml  .gitignore  AGENTS.md  README.md  analyze_history.py
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude/commands/: start-monitoring.md  stop-monitoring.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: android-apk.yml  android-cloud.yml  da-build.yml  dapy-build.yml  deepagents-build.yml  gadya-android.yml  mcp-build.yml
DA/: .gitignore  config.yaml  pyproject.toml  requirements.txt
DA/da/: __init__.py  claude_sessions.py  cli.py  client.py  config.py  history_analyzer.py  langfuse_sync.py  obsidian.py  rich_render.py  rich_tui.py  session.py  session_manager.py  store.py  thread.py  tui.py
DA/da/agents/: __init__.py  debug.py  infra.py  orchestrator.py
DA/da/prompts/: orchestrator.md
DA/da/tools/: __init__.py  docker.py  files.py  git.py  search.py  sessions.py  shell.py  ssh.py
DA/da/views/: __init__.py  config_editor.py  da_chat.py  obsidian.py  projects.py  sessions.py
DA/scripts/: install.sh
DAPY/: API_KEYS_TEMPLATE.txt  CURRENT_STATE.md  DELIVERY_CHECKLIST.md  Dockerfile  Dockerfile.dev  Dockerfile.inspector  GOLDEN_DATASET_PLAN.md  HANDOFF_TO_NEXT_MANUS.md  LANGCHAIN_CLOUD_DEPLOYMENT.md  LANGCHAIN_PLATFORM_ANALYSIS.md  QUICKSTART.md  README.md  ROADMAP.md  ROADMAP_HISTORICAL_DATA.md  SERVER_FIVE_DEPLOYMENT.md  START_HERE.md  UNIFIED_LLM_INTERFACE_ANALYSIS.md  USER_VISION_CHECKPOINT.md  docker-compose.yml  pyproject.toml
DAPY/dapy/: __init__.py  cli.py  debug_export.py  feedback.py  feedback_agent.py  feedback_dashboard.py  inspect.py  inspector_service.py  manus_feedback_agent.py  observability.py
DAPY/dapy/middleware/: snapshot.py
DAPY/dapy/prompts/: system_prompt.md
DAPY/dapy/tools/: __init__.py  archive.py  git_operations.py  validation.py
DAPY/dapy/workflows/: close_session.py  document_changes.py
DAPY/deployment/: README.md
DAPY/deployment/gcp/: .env.example  deploy.sh  nginx.conf
DAPY/deployment/langchain-cloud/: langchain.yaml
DAPY/deployment/server-five/: .env.example  README.md  WORKFLOW_QUICKREF.md  deploy.sh  docker-compose.yaml
DAPY/tools/: README_LOG_INGESTION.md  ingest_llm_logs.py  query_llm_logs.py
DeepAgents/: DAPY_DATA_SYNC.md  DAPY_TEST_CASES.md  EXAMPLES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml
DeepAgents/dapy/: __init__.py  cli.py  config.py  debug_export.py  feedback.py  feedback_dashboard.py  inspect.py  inspector_service.py  manus_feedback_agent.py  observability.py  orchestrator.py  persistence.py
DeepAgents/dapy/middleware/: __init__.py  breakpoint.py  logging.py  snapshot.py
DeepAgents/dapy/prompts/: system_prompt.md
DeepAgents/dapy/tools/: __init__.py  changelog.py  knowledge_base.py  mistake_processor.py  validation.py
DeepAgents/dapy/workflows/: __init__.py  close_session.py  document_changes.py  whats_next.py
DeepAgents/deployment/: README.md
DeepAgents/deployment/gcp/: docker-compose.yml
DeepAgents/deployment/langchain-cloud/: langchain.yaml
DeepAgents/deployment/server-five/: WORKFLOW_QUICKREF.md  docker-compose.yaml
Gadya/: README.md  app.config.ts  package.json  pnpm-lock.yaml  todo.md
Gadya/.github/workflows/: build-android.yml  gadya-android.yml
Gadya/app/: _layout.tsx
Gadya/constants/: oauth.ts
Gadya/server/: README.md  storage.ts
Gadya/server/__tests__/: ai.test.ts
Gadya/server/_core/: cookies.ts  dataApi.ts  llm.ts  sdk.ts
Gadya/server/services/: langchain.ts
Gadya/tests/: auth.logout.test.ts
SessionManager/: 2Do.md  MOVED.md  README.md  TASKS.md  discovery_rules.yaml  local.yaml  map.yaml  requirements.txt  session-manager.yaml  sessions.yaml  sessionskills.yaml  sm-import.yaml  sm-map.yaml.example  sm-pipeline.yaml  sm-review.yaml  tui.yaml
SessionManager/docs/: LANGFUSE-BACKFILL-RUNBOOK.md  SCHEMA.md  folder-structure.md  schema.sql
SessionManager/docs/tracks/: README.md  track-1-sessions-langfuse.md  track-2-handoff.md  track-2-projects-sessions.md  track-3-preservator-pipeline.md
SessionManager/launchd/: ai.sessionskills.preservator-ingest.plist
SessionManager/scripts/: PLAN-langfuse-upsert-backfill.md  importers.py  session-to-langfuse.py  sm-app.py  sm-local.py  sm-map.py  sm-pipeline.py  sm-review.py  sm-tui.py  sm.py
SessionManager/sessions/: llm.py  orchestrator.py  projects.py  record.py  review_tui.py  store.py
SessionManager/sessions/stages/: _obsidian_emit.py  analyze.py  ingest.py  ingest_preservator.py  link_project.py  merge.py
agents/standalone/: archive-agent.md  archiving.md  changelog-agent.md  changelog-management.md  docs-agent.md  knowledge-management-agent.md  mistake-review-agent.md  overview.md  push-agent.md  validation-agent.md
agents/swarm/: .claude-code.yaml  .pre-commit-config.yaml  ARCHIVAL_PLAN.md  ORCHESTRATOR-alt.md  ORCHESTRATOR.md  claude-code-orchestration-plan.md  research_questions.md
archive/: AGENTS.md  AGENTS_mistakes.md  AGENTS_old1.md  AGENTS_old2.md  INSTRUCTIONS_CORE.md  INSTRUCTIONS_EXPERIMENTAL.md
experiments/ManagedEngines-autodeploy/: run_agent.py  setup_agent.py
mcp/: .funcignore  .mcp.json  Dockerfile  README.md  function_app.py  graph_client.py  local.settings.json  mcp-claude-ai.json  mcp-servers.json  requirements.txt  tools.py  tools_admin.py  tools_keys.py  tools_neo4j.py  tools_obsidian.py  tools_qmd.py  tools_ticktick.py
mcp/import/: karelin-keys.json  karelin-m365-admin.json  karelin-m365.json  karelin-neo4j.json  karelin-obsidian.json  karelin-qmd.json  karelin-ticktick.json
plugins/: README.md
plugins/ac/: .mcp.json
plugins/administer/: .mcp.json  README.md
plugins/core/: .mcp.json
plugins/manage/: README.md
plugins/research/: .mcp.json  README.md
plugins/search/: README.md
plugins/work/: .mcp.json  README.md
scripts/: sync-to-xsolla.sh
skills/: README.md  medical-scan-organizer.plugin  skill-manager.plugin
skills/.claude-plugin/: marketplace.json
skills/organize/: SKILL.md
skills/organize-arxiv/: .arxiv_cache.json  SKILL.md  organize-downloads.bat
(+136 files in other folders)
