[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "DA"
dynamic = ["version"]
description = "Дebil Аgent: Personal multi-agent system that says ДА"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "paramiko>=3.0.0",
    "python-dotenv>=1.0.0",
    "prompt_toolkit>=3.0.0",
    "textual>=3.0.0",
    "gppu",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
da = "da.cli:cli"

[tool.setuptools_scm]
tag_regex = "^da-v(?P<version>.*)$"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "da-v*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["da*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
